--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
 
-\title{Variable Intake Electronics Subsystem}
+\title{Linear Actuated Variable Intake System (LATVIS)}
 \author{John Wiggins }
 \date{December 2019}
 
@@ -48,6 +48,13 @@ These are a few notes about the modes and operation of the RoboClaw:
 
 \subsubsection{CANVAS PCB}
 The CANVAS PCB operates as the MCU for the on-board system. With an integrated CAN Bus converter, the board operates as the interface between the vehicle and the motor controller. For more information on the board, refer to the CANVAS PCB Design section. 
+
+\begin{figure}[h!]
+\centering
+\includegraphics[scale=0.6]{pcb_2.jpg}
+\caption{CANVAS Board upon initial completion}
+\label{fig:CANVAS_WorkBench}
+\end{figure}
 
 \section{CANVAS PCB Design}
 \section{CAN Communication Notes}
